--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "name": "Mike Bostock",
     "url": "http://bost.ocks.org/mike"
   },
-  "main": "dist/d3-scale.js",
+  "main": "dist/cjs",
   "unpkg": "dist/d3-scale.min.js",
   "jsdelivr": "dist/d3-scale.min.js",
-  "module": "src/index.js",
+  "module": "dist/esm",
   "repository": {
     "type": "git",
     "url": "https://github.com/d3/d3-scale.git"
@@ -41,9 +41,13 @@
     "d3-time-format": "2"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "d3-color": "1",
     "eslint": "6",
     "rollup": "1",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-terser": "5",
     "tape": "4"
   }
